fix overflow

--- a/source/src/page/ContentsBanner.scss
+++ b/source/src/page/ContentsBanner.scss
@@ -12,6 +12,7 @@
     .description {
       font-size: 16px;
       margin-top: 8px;
+      overflow-x: hidden;
     }
 
     .date {
